--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="toolbar">#001524</color>
+    <color name="toolbar">#0e2e44</color>
+    <color name="tabLayout">#143d59</color>
 </resources>
