--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="toolbar">#0e2e44</color>
     <color name="tabLayout">#143d59</color>
+    <color name="tvlogo">#143d59</color>
 </resources>
