--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:id="@+id/container"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
@@ -47,16 +48,17 @@
             android:layout_gravity="end"
             android:layout_marginEnd="10dp"
             android:gravity="center"
+            android:id="@+id/llRefine"
             android:orientation="vertical">
-
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:background="@color/toolbar"
-                android:contentDescription="@string/icon_refine"
-                android:padding="2dp"
-                android:src="@drawable/icon_refine" />
+                <ImageButton
+                    android:id="@+id/imgRefine"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:background="@color/toolbar"
+                    android:contentDescription="@string/icon_refine"
+                    android:padding="2dp"
+                    android:src="@drawable/icon_refine" />
 
             <TextView
                 android:layout_width="wrap_content"
